hphp/test/slow/class_type_constant/type_constant2.php.expectf
Fatal error: syntax error, unexpected T_AS in %stest/slow/class_type_constant/type_constant2.php on line 5
